--- a/teaching.html
+++ b/teaching.html
@@ -39,7 +39,7 @@
                                         <header class="main">
                                         <h2>Teaching by inquiry</h2>
                                         </header>
-                                        <img src="images/pdp.png" alt="" width="400" align="middle"></a>
+                                            <img src="images/pdp.png" alt="" width="400" ></a>
                                     <p>In the past two years, I participated the ISEE PDP at UCSC, where I learned inquiry-based teaching and designed inquiry activities as part of the TAURUS Scholar program. These activities focused on challenging but versatile concepts in astronomy, such as how selection biases in observations can affect the interpretations of astronomical data, and how to build physical models from seemly complicated spectroscopic data. These activities were designed and structured to mirror an authentic research environment, where students can actively engage in scientific practices that are universal to many STEM fields. Students asked and selected the questions that motivated their study. Throughout their collaborative investigations, students would predict the outcome, propose for new observations/further training, and then present a detailed explanation and model given the evidence they gathered.</p>
                                         <ul class="actions">
                                             <li><a href="https://isee.ucsc.edu/programs/pdp/" class="button" target="_blank">ISEE PDP</a></li>
@@ -55,7 +55,7 @@
                                     <p><strong>Richard Seifert</strong> (UT undergraduate) studies the gas content in protocluster environment using submillimeter imaging data.</p>
                                     <p><strong>Derek Holman</strong> (2016 TAURUS Scholar) studies the importance of galaxy mergers in a young, proto galaxy cluster at redshift of 2.</p>
                                     <p><strong>Aaron Weiner</strong> (2014 Harvard summer scholar) studies UV-FIR SEDs of a sample of late-stage galaxy mergers compiled by cross-referencing Galaxy Zoo morphology classifications and IRAC faint source catalog.</p>
-                                    <img src="images/derek.png" alt="" width="350" align="middle"></a>
+                                        <img src="images/derek.png" alt="" width="400"></a>
                                 <p>Derek presented his research "Galaxy Mergers in Overdense Environments" at 2017 AAS meeting in Grapevine, TX. </p>
                                 </article>
                                 <article>
