--- a/research.html
+++ b/research.html
@@ -34,12 +34,21 @@
 							<!-- Banner -->
 								<section id="banner">
                                 <div class="content">
+                                       <div class="posts">
+                                    <article>
                                     <header class="main">
                                     <h2>Evolution of massive galaxies and galaxy clusters</h2>
                                     </header>
-                                       <p><strong>Our Universe was most active 10-11 billion years ago. At this time, the bulk of the star formation was enshrouded in the most dust-obscured galaxies, and they form stars at a very high rate. My research focuses on unresolved issues about the nature of these dusty galaxies. What are the fundemental drivers of the extreme star formation in the early Universe: violent galaxy interactions/mergers or secularly evolving processes? What are the relative contributions of these processes to the cosmic star formation history? How do these dusty galaxies link to the first collapses of the Universe's largest structure - massive galaxy clusters?</strong></p>
-                                    <div class="posts">
-                                        <article>
+                                       <p>Our Universe was most active 10-11 billion years ago. At this time, the bulk of the star formation was enshrouded in the most dust-obscured galaxies, and they form stars at a very high rate. My research focuses on unresolved issues about the nature of these dusty galaxies. What are the fundemental drivers of the extreme star formation in the early Universe: violent galaxy interactions/mergers or secularly evolving processes? What are the relative contributions of these processes to the cosmic star formation history? How do these dusty galaxies link to the first collapses of the Universe's largest structure - massive galaxy clusters?</p>
+                                       </article>
+                                     <article>
+                                     <header class="main">
+                                     <h3>A talk on "Galaxy Collisions!" at Astronomy on Tap in Austin</h3>
+                                     </header>
+                                     <iframe width="400" height="280" src="https://www.youtube.com/embed/a4KZrhPWL34?rel=0" frameborder="0" allowfullscreen></iframe></a>
+                                     </article>
+
+                                       <article>
                                         <header class="main">
                                         <h3>Physical drivers of extreme star formation</h3>
                                         </header>
