--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
     </head>
 
-
-    <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-87658137-1"></script>
     <script>
           window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
               gtag('js', new Date());
 
-                gtag('config', '134061355');
+                gtag('config', 'UA-87658137-1');
             </script>
+
 
 
 	<body>
