--- a/research.html
+++ b/research.html
@@ -29,6 +29,10 @@ for(h=0;h<k.length;h++)e(d,k[h]);a._i.push([b,c,f])};a.__SV=1.2;b=e.createElemen
 mixpanel.init("2d35dcacb7911d7cf57e10be4873e040");</script><!-- end Mixpanel -->
 	<body>
 
+<script type="text/javascript">  
+  mixpanel.track("Video Played");
+ </script>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -58,7 +62,7 @@ mixpanel.init("2d35dcacb7911d7cf57e10be4873e040");</script><!-- end Mixpanel -->
                                      <header class="main">
                                      <h3>A talk on "Galaxy Collisions!" at Astronomy on Tap in Austin</h3>
                                      </header>
-                                     <iframe width="400" height="280" src="https://www.youtube.com/embed/a4KZrhPWL34?rel=0" frameborder="0" allowfullscreen></iframe></a>
+                                     <iframe title="Video Played" width="400" height="280" src="https://www.youtube.com/embed/a4KZrhPWL34?rel=0" frameborder="0" allowfullscreen></iframe></a>
                                      </article>
 
                                        <article>
